Fixed z-index for map section header

--- a/css/rdd.css
+++ b/css/rdd.css
@@ -250,6 +250,7 @@ hr.small {
     padding: 25px 0;
     z-index: 2;
     margin-bottom: 40px;
+    position: relative;
 }
 
 .diagonal-left {
